--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,7 @@
-//
+@import "~bootstrap/scss/bootstrap";
+
+@import 'variables';
+@import 'mixins';
+@import 'general';
+@import 'partials/index';
+@import 'pages/index';
